overflow fix

--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ p {
 
 /*larger screens*/
 @media (min-width: 768px) {
+    html, body {
+        overflow: hidden;
+    }
     .container {
         flex-direction: row;
 		justify-content: center;
@@ -74,7 +77,8 @@ p {
 		height: 100vh;
 		width: 100%;
         order: 2;
-		overflow: scroll;
+		overflow-y: scroll;
+        overflow-x: hidden;
     }
 	.hofftech-logo {
 		margin-left: 0px;
